--- a/Recommender Systems with Python.ipynb
+++ b/Recommender Systems with Python.ipynb
@@ -5,18 +5,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "___\n",
-    "# Recommender Systems with Python\n",
-    "\n",
-    "Welcome to the code notebook for Recommender Systems with Python. In this lecture we will develop basic recommendation systems using Python and pandas.\n",
-    "\n",
-    "In this notebook, we will focus on providing a basic recommendation system by suggesting items that are most similar to a particular item, in this case, movies. Keep in mind, this is not a true robust recommendation system, to describe it more accurately,it just tells you what movies/items are most similar to your movie choice.\n",
-    "\n",
-    "There is no project for this topic, instead you have the option to work through the advanced lecture version of this notebook (totally optional!).\n",
-    "\n",
-    "Let's get started!\n",
-    "\n",
-    "## Import Libraries"
+    "# Recommender Systems with Python"
    ]
   },
   {
@@ -336,8 +325,6 @@
    "source": [
     "# EDA\n",
     "\n",
-    "Let's explore the data a bit and get a look at some of the best rated movies.\n",
-    "\n",
     "## Visualization Imports"
    ]
   },
@@ -357,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's create a ratings dataframe with average rating and number of ratings:"
+    "ratings dataframe with average rating and number of ratings:"
    ]
   },
   {
@@ -682,27 +669,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Okay! Now that we have a general idea of what the data looks like, let's move on to creating a simple recommendation system:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Recommending Similar Movies"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now let's create a matrix that has the user ids on one access and the movie title on another axis. Each cell will then consist of the rating the user gave to that movie. Note there will be a lot of NaN values, because most people have not seen most of the movies."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
@@ -980,13 +946,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Most rated movie:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
@@ -1101,13 +1060,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's choose two movies: starwars, a sci-fi movie. And Liar Liar, a comedy."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
@@ -1192,13 +1144,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now let's grab the user ratings for those two movies:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
@@ -1227,13 +1172,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can then use corrwith() method to get correlations between two pandas series:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
@@ -1258,13 +1196,6 @@
    "source": [
     "similar_to_starwars = moviemat.corrwith(starwars_user_ratings)\n",
     "similar_to_liarliar = moviemat.corrwith(liarliar_user_ratings)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's clean this by removing NaN values and using a DataFrame instead of a series:"
    ]
   },
   {
@@ -1344,13 +1275,6 @@
     "corr_starwars = pd.DataFrame(similar_to_starwars,columns=['Correlation'])\n",
     "corr_starwars.dropna(inplace=True)\n",
     "corr_starwars.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now if we sort the dataframe by correlation, we should get the most similar movies, however note that we get some results that don't really make sense. This is because there are a lot of movies only watched once by users who also watched star wars (it was the most popular movie). "
    ]
   },
   {
@@ -1456,13 +1380,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's fix this by filtering out movies that have less than 100 reviews (this value was chosen based off the histogram from earlier)."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
@@ -1545,13 +1462,6 @@
    "source": [
     "corr_starwars = corr_starwars.join(ratings['num of ratings'])\n",
     "corr_starwars.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now sort the values and notice how the titles make a lot more sense:"
    ]
   },
   {
@@ -1647,13 +1557,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now the same for the comedy Liar Liar:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
@@ -1739,18 +1642,6 @@
     "corr_liarliar = corr_liarliar.join(ratings['num of ratings'])\n",
     "corr_liarliar[corr_liarliar['num of ratings']>100].sort_values('Correlation',ascending=False).head()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
